# copietje

./: .gitignore  README.md  example.env  pyproject.toml
.github/workflows/: python.yml
copietje/: __init__.py  __main__.py  console.py  download.py  normalizers.py  ranking.py  tokenizers.py
experiments/: data.py  evaluation.py  experiment_fp_fn_lsh.py  experiment_hash_functions.py  experiment_threshold.py  experiment_timer_tokenizer.py  experiment_tokenizer.py
resources/: test_datasets.md
resources/news_edits_data/: create_news_edits_db.py
resources/test_data/: 1_odt.txt  1_pdf.txt  1_txt.txt  2_fulltext_odt.txt  2_partialtext_odt.txt  2_partialtext_pdf.txt  3_fulltext_changed_dots_odt.txt  3_fulltext_odt.txt  4_fulltext_odt.txt  4_fulltext_within_other_texts_odt.txt  5_fulltext_different_format_odt.txt  5_fulltext_different_format_pdf.txt  5_fulltext_odt.txt  5_fulltext_odt_fake_ocr_errors.txt
tests/: conftest.py  test_condenser.py  test_full_jaccard.py  test_hashes.py  test_make_hash.py  test_normalize_data.py  test_ranking.py  test_tokenize_data.py  test_tokenizers.py
tests/database/: test_news_edits.db
tests/experiments/: test_data.py
tests/files/: data1  data2
