[project]
name = "copietje"
version = "0.0"
description = ""
authors = [
    {name = "DS&AI",email = "noreply@nfi.nl"},
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "clean-text>=0.6.0",
    "datasketch>=1.6.5",
    "hansken>=2024.7.15",
    "mmh3>=4.1.0",
    "spacy>=3.7.5",
    "tqdm>=4.66.6",
    "unidecode>=1.3.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]

[project.scripts]
copietje = "copietje.console:main"

[project.optional-dependencies]
experiments = [
    "confidence>=0.15",
    "matplotlib>=3.9.2",
    "more-itertools>=10.4.0",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
    "tqdm>=4.66.6",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "coverage[toml]>=7.6.1",
    "pytest>=8.3.1",
]
check = [
    "flake8>=7.0.0",
    "flake8-pyprojecttoml>=0.0.2",
    "flake8-builtins>=2.5.0",
    "flake8-quotes>=3.4.0",
    "mypy>=1.11.0",
]

[tool.pdm.scripts]
all = {composite = ["check", "download-spacy-model", "test", "report"]}
check = {composite = ["flake8 copietje/", "mypy copietje/"]}
download-spacy-model = {cmd = "spacy download nl_core_news_md"}
report = {cmd = "coverage xml"}
test = {cmd = "coverage run --module pytest --junit-xml pytest.xml tests/"}

[tool.flake8]
max_line_length = 120

[tool.mypy]
disable_error_code = "import-untyped"
implicit_optional = true

[tool.coverage.run]
branch = true
source = ["copietje/"]
